<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginBottom="50dp"
        android:text="@string/monthly_mortgage_calculator"
        app:layout_constraintBottom_toTopOf="@+id/loanAmount"
        app:layout_constraintStart_toStartOf="@+id/loanAmount" />

    <EditText
        android:id="@+id/interestRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_interest_rate"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintStart_toStartOf="@+id/loanAmount"
        app:layout_constraintTop_toBottomOf="@+id/loanAmount" />

    <EditText
        android:id="@+id/timeline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_amount_of_months"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintStart_toStartOf="@+id/interestRate"
        app:layout_constraintTop_toBottomOf="@+id/interestRate" />

    <EditText
        android:id="@+id/loanAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="87dp"
        android:layout_marginTop="174dp"
        android:ems="10"
        android:hint="@string/enter_total_amount_of_loan"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/monthlyPayment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="41dp"
        app:layout_constraintEnd_toEndOf="@+id/btnSolve"
        app:layout_constraintTop_toBottomOf="@+id/btnSolve" />

    <Button
        android:id="@+id/btnSolve"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="@string/solve"
        app:layout_constraintEnd_toEndOf="@+id/timeline"
        app:layout_constraintStart_toStartOf="@+id/timeline"
        app:layout_constraintTop_toBottomOf="@+id/timeline" />

</androidx.constraintlayout.widget.ConstraintLayout>